--- a/src/stylesheet/account.css
+++ b/src/stylesheet/account.css
@@ -218,6 +218,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    color: var(--text-title);
 }
 
 .main-container .settings-container {
