--- a/views/map.ejs
+++ b/views/map.ejs
@@ -77,4 +77,9 @@
 </div>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=Ag4BXFJAwDv5amv68dj_c_1bh2UMuAdrsoyn-oiR9CBOhv5uy2oJ_Et_HnVS2Mmx'></script>
 <script src="/javascript/mapLoader.js"></script>
+<script>
+    document.getElementById("search").addEventListener("input", function() {
+        var searchInput = document.getElementById("search").style.color = "";
+    });
+</script>
 </html>
