--- a/views/notify.ejs
+++ b/views/notify.ejs
@@ -69,6 +69,14 @@
         <div class = "notification-container">
             <div class = "notification-header">
                 <h1 class = "notification-title">Notifications</h1>
+
+                <div class = "delete-all">
+                    <div class = "delete-all-button">
+                        <button onclick = "deleteAllNotifications()">
+                            <p>Delete All</p>
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <% notifications.forEach(notification => { %>
@@ -135,6 +143,20 @@
                 })
             }).then(response => {
                 window.location.href = reference;
+            });
+        }
+
+        function deleteAllNotifications() {
+            fetch('/deleteAllNotifications', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    ID: '<%=userID._id%>'
+                })
+            }).then(response => {
+                window.location.reload();
             });
         }
     </script>
