--- a/views/viewPost.ejs
+++ b/views/viewPost.ejs
@@ -164,13 +164,10 @@
         <div class = "comment-title">
           <h3>Create New Comment</h3>
         </div>
-        <form id = "newComment" action = "/commentPost" method = "POST">
           <div class = "comment-input">
             <textarea id = "comment" name = "comment" placeholder = "Enter your comment here"  rows="3" cols="3" wrap="hard" minlength="1" maxlength="150" style="resize: none;"></textarea>
-            <button type = "submit" id = "comment-button">Comment</button>
+            <button type = "submit" id = "comment-button" onclick = "submitComment()">Comment</button>
           </div>
-          <input type = "hidden" name = "postID" value = "<%=post._id%>">
-          </form>
       </div>
       <% } %>
       <% if (!userID) { %>
@@ -220,9 +217,8 @@
                   </button>
                 </div>
                 <% if (isOwner || userID.username == comment.username) { %>
-                    <form action="/deleteComment/<%=comment._id%>" method="POST">
                       <div class="item">
-                        <button class="delete-button">
+                        <button class="delete-button" onclick = "deleteComment('<%=comment._id%>')">
                           <label for="delete-button">
                             <div class="tooltip">
                               <i class="fas fa-trash" style="margin-top: 0.25em"></i>
@@ -231,8 +227,6 @@
                           </label>
                         </button>
                       </div>
-                      <input type="hidden" name="postID" value="<%=post._id%>">
-                    </form>
                 <% } %>
             </div>
           </div>
@@ -253,6 +247,42 @@
 <script src="/javascript/script.js"></script>
 <script src="/javascript/verifyLikes.js"></script>
 <script>
+  function submitComment(){
+    fetch('/commentPost', {
+      method: 'POST',
+      headers: {
+          'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        postID: '<%=post._id%>',
+        comment: document.getElementById('comment').value,
+      })
+    }).then(response => {
+      if (response.ok) {
+        console.log("Comment was successfully created");
+        window.location.reload();
+      }
+    });
+  }
+
+  function deleteComment(commentID){
+    fetch('/deleteComment', {
+      method: 'POST',
+      headers: {
+          'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        postID: '<%=post._id%>',
+        commentID: commentID,
+      })
+    }).then(response => {
+      if (response.ok) {
+        console.log("Comment was successfully deleted");
+        window.location.reload();
+      }
+    });
+  }
+
   document.getElementById('comment').addEventListener('input', function() {
       var lines = this.value.split('\n');
       if (lines.length > 3) {
