fixes to view all posts, and a few other small fixes. also updated read me

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -101,7 +101,7 @@
                                         <div class = "image-container">
                                             <img src = "<%=otherUsers[i].photo%>" alt="">
                                         </div>
-                                        <p><%=otherUsers[i].username%></p>
+                                        <p id = "username"><%=otherUsers[i].username%></p>
                                         <div class = "message-date">
                                             <p><%=messageList[i].messages[messageList[i].messages.length - 1].date%></p>
                                         </div>
