--- a/src/stylesheet/messages.css
+++ b/src/stylesheet/messages.css
@@ -189,7 +189,7 @@
 
 .main-container .message-container .message-dropdown-container {
     width: 100%;
-    height: 70%;
+    height: 100%;
     display: flex;
     align-self: flex-end;
     flex-direction: column;
@@ -203,13 +203,12 @@
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown {
-    width: 75%;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-self: center;
     align-self: center;
     flex-direction: column;
-    border: 1px solid var(--border-standard);
     border-bottom: none;
     border-top: none;
     overflow-y: auto;
@@ -217,7 +216,7 @@
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content {
     width: 100%;
-    height:15%;
+    height:50%;
     display: flex;
     border-bottom: 1px solid var(--border-standard);
     flex-direction: column;
@@ -226,7 +225,6 @@
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content:hover {
     background-color: var(--standard-hover-background);
 }
-
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user {
    display: flex;
@@ -247,18 +245,25 @@
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .image-container img {
-    width: 1.25em;
-    height: 1.25em;
+    width: 2em;
+    height: 2em;
     border-radius: 50%;
 }
 
-.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user p {
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user p{
     font-size: 1em;
     display:flex;
     align-items: center;
     margin-left: 0.5em;
-    font-size: 0.9em;
     color: var(--text-title);
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user #username{
+    font-size: 1.5rem;
+}
+
+.main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-date {
+    font-size: 1rem;
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .message-user .message-date {
@@ -269,10 +274,11 @@
 }
 
 .main-container .message-container .message-dropdown-container .message-dropdown .dropdown-content .recent-message {
-    padding: 0.5em;
-    padding-left: 1.5em;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 1.25rem;
     color: var(--text-paragraph);
-    font-size: 0.8em;
+    font-size: 1.5em;
     text-align: left;
 }
 
@@ -331,7 +337,7 @@
     display:flex;
     justify-self: center;
     align-self: center;
-    width: 95%;
+    width: 100%;
     height: 90%;
     overflow-y: scroll;
     flex-direction: column;
@@ -352,8 +358,10 @@
     flex-direction: row;
     width: 100%;
     height: 2.5em;
-    margin: 0.5rem;
-    margin-bottom: .5rem;
+    margin-left: 0.5rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+
     color: var(--text-paragraph);
 }
 
