--- a/views/viewAllPosts.ejs
+++ b/views/viewAllPosts.ejs
@@ -122,6 +122,9 @@
                   </form>
                 </div>
               </div>
+              <input type = "hidden" id = "postLikes" value = "<%=post.likes%>">
+              <input type = "hidden" id = "postFavourites" value = "<%=post.favourites%>">
+              <input type = "hidden" id = "postID" value = "<%=post._id%>">
           </div>
         <% }) %>
         <% if (posts.length > 0) {%>
@@ -140,15 +143,10 @@
       </div>
     <% } %>
 </div>
+<input type = "hidden" id = "username" value = "<%=userID.username%>">
+<input type = "hidden" id = "userID" value = "<%=userID%>">
 </body>
-  <script>
-    var posts = JSON.stringify(`<%=posts%>`);
-    for (let i = 0; i < `<%=posts.length%>`; i++) {
-      console.log(JSON.parse(posts[i]));
-
-    } 
-    
-  </script>
-
+<script src="/javascript/script.js"></script>
+<script src="/javascript/verifyAll.js"></script>
 
 </html>
